# rsomics-bed-utils

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  main.rs
src/ops/: annotate.rs  bed_sort.rs  byteparse.rs  chroms.rs  chroms_sizes.rs  closest.rs  cluster.rs  complement.rs  count.rs  coverage_hist.rs  fisher.rs  flank.rs  flank_bp.rs  genomecov.rs  getfasta.rs  groupby.rs  intersect.rs  jaccard.rs  len.rs  makewindows.rs  map.rs  maskfasta.rs  merge.rs  merge_by_name.rs  merge_overlaps.rs  midpoint.rs  mod.rs  multiinter.rs  nuc.rs  overlap.rs  promoters.rs  random.rs  reldist.rs  rename.rs  resize.rs  sample.rs  shift.rs  shuffle.rs  slop.rs  sort_name.rs  (+17 more)
tests/: compat.rs  smoke.rs
tests/golden/: b.bed  chrom_map.txt  closest_a.bed  closest_ties_a.bed  closest_ties_b.bed  closest_wide_b_a.bed  closest_wide_b_b.bed  cluster.bed  features.gff  fisher_a.bed  fisher_b.bed  fisher_genome.txt  genomecov_sci.bed  genomecov_sci_genome.txt  genomecov_sciformat.bed  genomecov_sciformat_genome.txt  groupby.bed  jaccard_a.bed  jaccard_b.bed  map_a.bed  map_b.bed  mask_ref.fa  mask_regions.bed  multiinter_a.bed  multiinter_b.bed  multiinter_overlap_a.bed  multiinter_overlap_b.bed  multiinter_overlap_c.bed  nuc_ref.fa  nuc_regions.bed  ref.fa  ref.fa.fai  reldist_a.bed  reldist_b.bed  shuffle_excl.bed  shuffle_genome.txt  shuffle_in.bed  small.bed  unionbedg_a.bg  unionbedg_b.bg  (+1 more)
