[package]
name = "rsomics-bed-utils"
version = "0.2.2"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "BED utility toolkit — sort, merge, intersect, subtract, complement, stats, convert, and 40+ more operations"

[[bin]]
name = "rsomics-bed-utils"
path = "src/main.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-intervals = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
needletail = "0.6"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

